--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "rollup -c rollup.config.js"
   },
+  "type": "module",
   "devDependencies": {
     "@babel/core": "^7.22.8",
     "@babel/preset-env": "^7.22.7",
     "@babel/preset-typescript": "^7.22.5",
+    "@rollup/plugin-typescript": "^11.1.2",
     "@types/jest": "^29.5.2",
     "babel-jest": "^29.6.1",
     "jest": "^29.6.1",
+    "rollup": "^3.27.0",
+    "tslib": "^2.6.1",
     "typescript": "^5.1.6"
   }
 }
